# mmm-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/: RELEASE_TEMPLATE.md
examples/basic/: model.json  run.sh
include/: adstock.hpp  channels.hpp  json_io.hpp  mmm.hpp  optimizer.hpp  saturation.hpp  seasonality.hpp  storage.hpp  trend.hpp
src/: adstock.cpp  channels.cpp  cli.cpp  json_io.cpp  mmm.cpp  optimizer.cpp  saturation.cpp  seasonality.cpp  trend.cpp
